--- a/input.css
+++ b/input.css
@@ -1,3 +1,98 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .main {
+    @apply portable:w-full portable:h-full portable:flex portable:justify-center portable:content-center;
+    @apply tablet:w-full tablet:h-full tablet:flex tablet:justify-center tablet:content-center;
+  }
+}
+
+@layer components {
+  .clientContainer {
+    @apply portable:w-4/6 portable:h-full portable:flex-col portable:justify-center portable:content-center portable:text-start;
+    @apply tablet:w-5/6 tablet:h-full tablet:grid tablet:grid-cols-2  tablet:gap-10 tablet:text-start;
+  }
+}
+
+@layer components {
+  .clientCard {
+    @apply portable:flex-col portable:justify-center portable:content-center portable:bg-slate-50 portable:border-2 portable:rounded-xl portable:my-6 portable:w-full portable:h-[18rem];
+    @apply tablet:flex-col tablet:justify-center tablet:content-center tablet:bg-slate-50 tablet:border-2 tablet:rounded-xl tablet:my-6 tablet:w-full tablet:h-[25rem];
+  }
+}
+
+@layer components {
+  .imageSection {
+    @apply portable:flex portable:justify-center portable:content-center portable:m-2;
+    @apply tablet:flex tablet:justify-center tablet:content-center tablet:m-2;
+  }
+}
+
+@layer components {
+  .clientImage {
+    @apply portable:rounded-full portable:h-20 portable:w-20 portable:shadow-xl;
+    @apply tablet:rounded-full tablet:h-20 tablet:w-20 tablet:shadow-xl;
+  }
+}
+
+@layer components {
+  .infoSection {
+    @apply portable:text-sm portable:m-3 portable:p-2 portable:rounded-full portable:shadow-xl portable:text-center portable:leading-6;
+    @apply tablet:text-lg tablet:h-2/4 tablet:m-5 tablet:p-1 tablet:rounded-xl tablet:shadow-xl tablet:text-center tablet:leading-5 tablet:flex tablet:justify-center tablet:items-center;
+  }
+}
+
+@layer components {
+  .nomClient {
+    @apply portable:font-bold;
+    @apply tablet:font-extrabold;
+  }
+}
+
+@layer components {
+  .toogleButton {
+    @apply portable:m-5 portable:rounded-full;
+    @apply tablet:m-5 tablet:rounded-full;
+  }
+}
+
+/* Composant JS */
+#closeButton {
+  display: none;
+}
+
+/* Stylisation en Grand */
+.enGrand {
+  position: fixed;
+  top: -1.5rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease-in-out;
+}
+
+.clientCard.enGrand .clientImage {
+  /* Styles pour l'image dans la carte agrandie */
+  width: 9rem;
+  height: 9rem;
+  transition: all 0.5s ease-in-out;
+}
+
+.clientCard.enGrand .infoSection {
+  /* Styles pour la section d'informations dans la carte agrandie */
+  width: 75%;
+  box-shadow: none;
+  font-size: larger;
+  transition: all 0.5s ease-in-out;
+}
+.clientCard a:hover {
+  cursor: pointer;
+  color: gray;
+}
